manifests/ocm-description-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
  name: icos-ocm-description
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: ocm-hub.bull1.ari-imet.eu
      http:
         paths:
           - backend:
               service:
                 name: ocm-description-service
                 port:
                   number: 8083
             path: /deploy-manager
             pathType: Prefix
